[package]
name = "rrc"
version = "0.1.2"
authors = ["mopemope <yutaka.matsubara@gmail.com>"]
edition = "2021"
description = "A manage remote repository clones"
homepage = "https://github.com/mopemope/rrc"
repository = "https://github.com/mopemope/rrc"
keywords = ["git", "tool"]
readme = "README.md"
license = "Apache-2.0"

[dependencies]
clap = "3"
anyhow = "1"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.9"
regex = "1"
toml = "0.5"
serde = "1"
serde_derive = "1"
dirs = "4"
url = "2.1"
# async-std = { git = 'https://github.com/stjepang/async-std', branch = 'new-scheduler' }
async-std = "1"
