[package]
name = "rrc"
version = "0.2.0"
authors = ["mopemope <yutaka.matsubara@gmail.com>"]
edition = "2021"
description = "A manage remote repository clones"
homepage = "https://github.com/mopemope/rrc"
repository = "https://github.com/mopemope/rrc"
keywords = ["git", "tool"]
readme = "README.md"
license = "Apache-2.0"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[dependencies]
clap = "3"
anyhow = "1"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.9"
regex = "1"
toml = "0.5"
serde = "1"
serde_derive = "1"
dirs = "4"
url = "2.5.0"
# async-std = { git = 'https://github.com/stjepang/async-std', branch = 'new-scheduler' }
async-std = "1"
