[package]
name = "rrc"
version = "0.2.0"
authors = ["mopemope <yutaka.matsubara@gmail.com>"]
edition = "2021"
description = "A manage remote repository clones"
homepage = "https://github.com/mopemope/rrc"
repository = "https://github.com/mopemope/rrc"
keywords = ["git", "tool"]
readme = "README.md"
license = "Apache-2.0"

[dependencies]
clap = { version = "3", features = ["std"], default-features = false }
anyhow = "1"
lazy_static = "1.4"
log = "0.4"
env_logger = { version = "0.11", default-features = false }
regex = { version = "1", default-features = false }
toml = "0.5"
serde = { version = "1", default-features = false }
serde_derive = "1"
dirs = "5"
url = "2.1"
async-std = "1"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
